--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 }
 .mdl-layout__content{
-	background: URL('http://hdwallpaperbackgrounds.net/wp-content/uploads/2015/11/3D-Beautiful-Night-Wallpaper-1366x768.jpg') center / cover;
+/*	background: URL('http://hdwallpaperbackgrounds.net/wp-content/uploads/2015/11/3D-Beautiful-Night-Wallpaper-1366x768.jpg') center / cover;*/
 }
 
 #logoimg{
